<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.catsonactivity.apps.navcomponent.NavCatDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/catImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            tools:src="@drawable/circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle_bg"
            tools:src="@drawable/ic_favorite_not"
            app:layout_constraintEnd_toEndOf="@id/catImageView"
            app:layout_constraintBottom_toBottomOf="@id/catImageView"/>

        <TextView
            android:id="@+id/catNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            tools:text="Cat Name"
            app:layout_constraintTop_toBottomOf="@id/catImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/catDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            tools:text="Lorem ipsum... Some cat description here"
            app:layout_constraintTop_toBottomOf="@id/catNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/go_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/catDescriptionTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>